fix navbar logo not scaling properly on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -42,6 +42,7 @@ header {
 
 .navbar-brand {
     height: 4.5rem;
+    width: 3.4rem;
 }
 
 .navbar-item>.nav-link {
@@ -54,8 +55,8 @@ header {
 
 .hero-main-card {
     /* fallback for not supported*/
-    background: #d81331 center / cover no-repeat url("../img/techno-bg.svg");
-    background: center / cover no-repeat url("../img/techno-bg.svg"), linear-gradient(to right, #d81331, #d81340);
+    background: #d81331 center / cover no-repeat url("../img/circuits-bg.svg");
+    background: center / cover no-repeat url("../img/circuits-bg.svg"), linear-gradient(to right, #d81331, #d81340);
     border: 4px solid #e8ebf7;
     height: 75vh;
     margin-top: 2vh;
@@ -300,7 +301,8 @@ hr {
         padding-left: 5vw;
     }
     .navbar-brand {
-        height: 5rem;
+        height: 6.6rem;
+        width: 5rem;
     }
 }
 
